# drone_ardupilot

./: ARUCO_MARKER_ORIENTATION_GUIDE.md  AUTO_STARTUP_USAGE.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  requirements.txt
log/: latest_list
src/: CMakeLists.txt  package.xml  setup.py
src/config/: aruco_detector.yaml  camera_calibration.yaml  flight_controller.yaml  mission_manager.yaml  position_estimator.yaml
src/launch/: aruco_test.launch.py  warehouse_nav.launch.py
src/maps/: marker_map_sample.yaml  mission_sample.yaml
src/resource/: warehouse_drone_nav
src/scripts/: aruco_detector_node.py  auto_startup_node.py  flight_controller_node.py  mission_manager_node.py  position_estimator_node.py  position_monitor.py
src/scripts/startup/: start_drone.sh  stop_drone.sh
src/warehouse_drone_nav/: __init__.py  auto_startup_node.py
tools/: generate_markers.py
